VP 10.2.0 Changelog
------------------------

- Add aspect ratio to dimension manager

- Lights can be debugged in the debugger. Open the debugger, click on the "Light" button and a new dialog will appear where all dynamic values are editable. Properties like blinking/on/off are
  based on the timing of the player but the timing is stopped while debugging. You have to click in the player window to see the changes. And beware that all light properties can be changed by 
  the script, so these might be overwritten by the script even if you try to set them in the debugger.

- Add show debugger hot key option to the keys preferences. If hot key is pressed it opens the debugger window without showing the pause menu.

- Duration function added to the light commands. See CommandReference.txt for more details.

- under Video Preferences you can define a waiting time after which VP will do a alt+tab simulation for bringing the VP player back into exclusive fullscreen mode.

- hotkey for adding normal and smooth control points for walls, ramps and lights. Select a wall,ramp or light and press F10 for a normal unsmoothed control point and F11 for a smoothed one.

- animation support for mesh primitives added: The animation sequence is based on multiple .obj files for each frame. Let's say we have an animation of 100 single frames, then you have to export
  each frame into a separate .obj file with the nameing format <meshname>_x.obj where x is the frame number. When importing a mesh, check the "Import Animation sequence" in the import dialog and
  select the .obj file of the first frame. VP will then load all other frames and, when done, will show you a short message box how many frames were imported.
  Check the CommandReference.txt for the new primitive animation script functions.

- bumper cap, base, ring, skirt can be set to invisible separately

- add one-way trigger mesh (TriggerWireC type)
